ticketing/alfio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alfio
  name: alfio
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: alfio
  sessionAffinity: None
  type: ClusterIP
